# momentum-signal-engine-ver

./: .env.example  .gitignore  pyproject.toml  render.yaml  requirements.txt
config/: settings.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
mobile/: README.md  app.json  jest.setup.js  package-lock.json  package.json
mobile/__tests__/: _helpers.tsx  alerts.screen.test.tsx  api.test.ts  instrument.screen.test.tsx  market.screen.test.tsx  push.test.ts  scanner.screen.test.tsx  search.screen.test.tsx  settings.screen.test.tsx  theme.test.ts  watchlist.screen.test.tsx
mobile/app/: _layout.tsx  alerts.tsx  community.tsx  comparison.tsx  journal.tsx
scripts/: e2e_phase_smoke.py  e2e_smoke.py
src/: main.py
src/ai/: agent.py  transcript.py
src/api/: routes.py
src/auth/: deps.py  referrals.py  users.py
src/backtest/: engine.py  signal_tester.py
src/cli/: commands.py
src/data/: cache.py  client.py  finra_client.py  fmp_client.py  models.py  polygon_client.py  rate_limiter.py  redis_store.py
src/journal/: trade_journal.py
tests/: test_analyzer.py  test_cyclical.py  test_indicators.py  test_instrument_fundamentals.py  test_instrument_indicators.py  test_international_routing.py  test_intraday_patterns.py  test_market_hours.py  test_multi_year_trends.py  test_portfolio_metrics.py  test_portfolio_parser.py  test_preset_screener.py  test_profile_screener.py  test_push_notifications.py  test_routes.py  test_scanner.py  test_seasonality.py  test_seen_signals.py  test_signals.py  test_sms_dedup.py
(+173 files in other folders)
